--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.10",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"svelte-render-scan": "^1.1.0",
 		"tailwind-merge": "^3.0.1",
 		"tailwind-variants": "1.0.0",
 		"tailwindcss": "^3.4.17",
@@ -42,6 +43,5 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0"
-	},
-	"dependencies": {}
+	}
 }
